added most of the logic

--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
 
         <div id="row5" class="row">
             <div onclick="setIcon(id)" class="caskets" id="24"></div>
-            <div onclick="setIcon(id)" id class="caskets" id="25"></div>
+            <div onclick="setIcon(id)" class="caskets" id="25"></div>
             <div onclick="setIcon(id)" class="caskets" id="26"></div>
             <div onclick="setIcon(id)" class="caskets" id="27"></div>
             <div onclick="setIcon(id)" class="caskets" id="28"></div>
