--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <div class=" max-height">
         <!-- Headlines -->
 
-        <header class="headlines">
+        <header id="players" class="headlines">
             <h1 id="player1">Player 1<img id="player1Img" class="images-header" src="./img/cross.png"></h1>
             <h1 id="player2">Player 2<img id="player2Img" class="images-header" src="./img/circle.png"></h1>
         </header>
