--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
         <!-- Gamefield -->
         <div id="end-screen" class="d-none end-screen">
             <span id="winner">Player won!</span>
-            <a class="push_button blue" onclick="restartGame()">Restart game</a>
+            <a id="restart-button" class="push_button blue" onclick="restartGame()">Restart game</a>
         </div>
         <div id="gamefield">
 
